@@ -1,0 +1,26 @@
+col1,col2
+-------------------------------
+1,155190
+1,67310
+1,63700
+1,24027
+1,15635
+1,2132
+2,106170
+3,183095
+3,128449
+3,62143
+3,29380
+3,19036
+3,4297
+4,88035
+5,123927
+5,108570
+5,37531
+6,139636
+7,163073
+7,157238
+7,151894
+7,145243
+7,94780
+7,79251
